# module_test

./: pyproject.toml
module_test/: component.yaml  run.py
