[tool.poetry]
name = "module_test"
version = "0.1.0"
description = ""
authors = ["moarshy <marshath@gmail.com>"]
readme = "README.md"
packages = [
    {include = "module_test", from="."}
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"